# chess-llm

./: .actrc  .gitignore  .lintstagedrc  .lintstagedrc.cjs  .vercelignore  README.md  build.py  evaluation.py  example.env  exploration_data.ipynb  llm.ipynb  main.ipynb  modules.py  package-lock.json  package.json  pyproject.toml  reports copy 2.ipynb  reports copy.ipynb  reports.ipynb  requirements-server.txt  requirements.txt  test.ipynb  test_hook.py  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  vercel-preview-smoke.yml
api/: index.py
chess_llm_eval/: schemas.py
chess_llm_eval/agents/: __init__.py  base.py  llm.py  random.py  stockfish.py
chess_llm_eval/core/: __init__.py  chess_env.py  evaluator.py  types.py
chess_llm_eval/data/: __init__.py  backup.py  json_repo.py  models.py  protocols.py  seeder.py  sqlite.py
chess_llm_eval/llm_evaluation/: report_generator.py
chess_llm_eval/providers/: __init__.py  base.py  nim.py  openrouter.py
data/: EndGameDB.csv  StrategicDB.csv  TacticDB.csv  puzzles.json  storageX.db
docs/: architecture.md  roadmap.md
modules/: __init__.py  chess_env.py  database_manager.py  evaluator.py  logger.py  puzzle_selector.py  report_generator.py  router.py
scripts/: backup_db.py  export_puzzles.py
tests/: check_db_perf.py  conftest.py  test_api_parity.py  test_deployment_compat.py  test_e2e_pipeline.py  test_json_repository.py  test_server_analytics_json.py  test_server_endpoints.py  test_sqlite_order.py
website/: index.html  package-lock.json  package.json
(+67 files in other folders)
